<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_on_primary" />

    <LinearLayout
        android:id="@+id/dropdownLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:focusable="true"
        android:background="@color/color_on_primary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:src="@drawable/ic_bill_down_next"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/bill_keyboard_divider_vertical"
        android:orientation="vertical"
        android:showDividers="end|beginning|middle"
        android:stretchColumns="0,1,2">

        <TableRow
            android:divider="@drawable/bill_keyboard_divider_horizontal"
            android:orientation="horizontal"
            android:showDividers="end|beginning|middle">

            <Button
                android:id="@+id/button01"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_1"
                android:textColor="#FFFFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button02"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_2"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button03"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_3"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow
            android:divider="@drawable/bill_keyboard_divider_horizontal"
            android:orientation="horizontal"
            android:showDividers="end|beginning|middle">

            <Button
                android:id="@+id/button04"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_4"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button05"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_5"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button06"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_6"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow
            android:divider="@drawable/bill_keyboard_divider_horizontal"
            android:orientation="horizontal"
            android:showDividers="end|beginning|middle">

            <Button
                android:id="@+id/button07"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_7"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button08"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_8"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button09"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_9"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow
            android:divider="@drawable/bill_keyboard_divider_horizontal"
            android:orientation="horizontal"
            android:showDividers="end|beginning|middle">

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/dot"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button00"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/_0"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/buttonCross"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/color_on_primary"
                android:text="@string/ic_delete"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
    </TableLayout>
</LinearLayout>