<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:orientation="horizontal"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <ImageView
        android:id="@+id/detailLeftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dailyLeftArrow"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:tint="?attr/colorPrimaryVariant"
        tools:ignore="RtlHardcoded" />

  <TextView
      android:id="@+id/detailDateText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/guideline3"
      android:text="@string/bill_date_day"
      android:textAppearance="?attr/textAppearanceSubtitle1"

      tools:text="2020-10-02" />

  <ImageView
        android:id="@+id/detailRightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dailyRightArrow"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:tint="?attr/colorPrimaryVariant"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>