<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/accountFragment"
    tools:context=".ui.account.AccountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/keyLineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing_keyline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/keyLineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing_keyline" />

            <ImageView
                android:id="@+id/monthlyLeftArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:contentDescription="@string/monthlyLeftArrow"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintBottom_toBottomOf="@id/accountTagTitle"
                app:layout_constraintEnd_toEndOf="@id/guideline1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/keyLineStart"
                app:tint="?attr/colorPrimaryVariant" />

            <ImageView
                android:id="@+id/monthlyRightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:contentDescription="@string/monthlyRightArrow"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/accountTagTitle"
                app:layout_constraintEnd_toEndOf="@id/keyLineEnd"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:tint="?attr/colorPrimaryVariant" />

            <com.keeppieces.pie_chart.PieChart
                android:id="@+id/pieChart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/accountTagTitle"
                style="?attr/textAppearanceHeadline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/pieChart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/pieChart"
                android:text="@string/account" />

            <TextView
                android:id="@+id/timeSpanView"
                style="?attr/textAppearanceSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                tools:text="时间范围"
                app:layout_constraintTop_toBottomOf="@id/accountTagTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accountOverviewRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pieChart"
                tools:itemCount="3"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/layout_type_overview_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>